--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
